# xnative-recursive-learning

./: .env.example  .gitignore  CODE_CHANGELOG.md  Dockerfile  README.md  analysis.py  app.py  board.py  call_api.py  candidate.py  docker-compose.yml  main.py  project_board.md  pyproject.toml  recommender.py  requirements.txt  summarizer.py  translator.py  trending.py
backend/: __init__.py
docs/: AGENT_IMPLEMENTATION_REPORT.md  ALGORITHM_AND_PERFORMANCE_PLAN.md  ALGORITHM_SELECTION_AND_EXPERIMENT_PLAN.md  ALGORITHM_TECHNOLOGY_RADAR.md  APPLIED_REQUIREMENTS_SOURCE.txt  ARCHITECTURE_DECISIONS.md  DATA_LIFECYCLE_AND_ARCHIVING.md  DOCUMENT_STATUS.md  ENGINEERING_BASELINE.md  EXTERNAL_SERVICES_POLICY.md  FINAL_QA_REPORT.md  GITHUB_REPOSITORY_PLAN.md  IMPLEMENTATION_SPECIFICATION.md  MASTER_IMPLEMENTATION_BACKLOG.md  ML_MULTIMODAL_LEARNING_STRATEGY.md  MODEL_AND_DATA_CARD_TEMPLATE.md  OPERATIONS_RUNBOOK.md  PROJECT_DOCUMENT.md  REQUIREMENTS_TRACEABILITY.md  RISK_REGISTER.md  TARGET_ARCHITECTURE.md  TECHNICAL_DOCUMENT.md  TEST_PLAN.md  USER_GUIDE.md  UX_PRODUCT_BRIEF.md  ZERO_COST_STRATEGY.md
docs/diagrams/: architecture_overview.mmd  capture_sequence.mmd  domain_erd.mmd  job_state.mmd  learning_loop.mmd
extension/: background.js  content.js  manifest.json  popup.html  popup.js
scripts/docs/: build_master_plan.py
scripts/qa/: background_api_db_check.sh  content_script_browser_check.sh
tests/fixtures/: content_script_dom_fixture.html  dom_capture_posts.json  multimodal_weak_supervision.json  posts.json
tests/integration/: test_phase1_storage.py  test_phase2_api_capture.py  test_phase3_jobs.py  test_sample_pipeline.py
tests/unit/: test_core_modules.py  test_hardware_preflight.py  test_media_hashing.py  (+3 more)
xnative/: sample_pipeline.py
(+89 files in other folders)
