[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "xnative-recursive-learning"
version = "0.1.0"
description = "Local-first multimodal content intelligence for a human-controlled X account"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "Proprietary - project license not yet selected"}
authors = [{name = "XNative Project"}]
dependencies = [
  "fastapi>=0.110,<1",
  "numpy>=1.26,<2.3",
  "pillow>=10,<13",
  "pydantic>=2.6,<3",
  "scikit-learn>=1.3,<2",
  "streamlit>=1.32,<2",
  "uvicorn[standard]>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.10,<2",
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.5,<1",
]
media = [
  "imagehash>=4.3,<5",
  "pytesseract>=0.3.13,<1",
]

[tool.setuptools.packages.find]
include = ["xnative*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["xnative"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["docs/archive"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"scripts/docs/build_master_plan.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["^docs/archive/"]

[[tool.mypy.overrides]]
module = ["sklearn.*", "pytesseract"]
ignore_missing_imports = true
follow_imports = "skip"
